Files/index.css
/* ... */
/* Track */
::-webkit-scrollbar-track {
    background: #f1f1f1;
}
/* Handle */
::-webkit-scrollbar-thumb {
    background: #E70000;
}
/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
    background: transparent;
}

body {
    overflow-x: hidden;
    margin: 0;
    padding: 0;
    position: relative;
    background-color: #F0F5F9;
    font-family: 'inter', sans-serif;
}
    header {
        height: 90px;
        position: sticky;
            top: 0;
            z-index: 10;
        background: linear-gradient(0deg, rgba(250,248,240,0) 0%, rgba(240,245,249,0.6587009803921569) 50%, rgba(240,245,249,1) 100%);
        box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
    }
        .header-container {
            height: 100%;
            padding: 10px;
            display: flex;
            justify-content: space-between;
        }
            .cp-sec{
                height: 90px;
                width: 90px;
                display: flex;
                    justify-content: center;
                    align-items: center;
            }
                .cp {
                    display: none;

                }
            .tabs-section{
                padding: 15px;
                width: 50%;
                height: 50%;
                display: flex;
                    justify-content: center;
                    align-items: center;
            }
                .tabs{
                    width: 100%;
                    list-style-type: none;
                    display: flex;
                        justify-content: center;
                        align-items: center;
                        gap: 30px;
                }
                    .tabs li{
                        font-weight:900;
                    }
                        .tabs li a:link, .tabs li a:visited {
                            text-decoration: none;
                            color: #000;
                        }
                        .tabs li a:hover {
                            color: red;
                            text-decoration: none;
                        }
                        .tabs li a:active {
                            text-decoration: none;
                            color: #000;
                        }
                    .tabs .active{
                        cursor: pointer;
                        color: #E70000;
                    }
                    .tabs li:hover, .tabs li:hover a{
                        cursor: pointer;
                        color: #E70000;
                    }
                        .dropbox-reco {
                            position: relative;
                        }
                        .dropbox-reco:hover .choices {
                            display: block;
                        }
                        .dropbox-reco:hover .filler{
                            color: #E70000;
                        }
                            .filler {
                                font-weight:900;
                                cursor: pointer;
                            }
                            .choices {
                                transform: translateX(-10px);
                                position: fixed;
                                display: none;
                            }
                                .choices li{
                                    background-color: #d5dfe59c;
                                    padding: 5px 20px 5px 20px;
                                    list-style-type: none;
                                }
            .small-section {
                height: 50%;
                padding: 10px;
                display: flex;
                    justify-content: center;
                    align-items: center;
            } 
                .logo{
                    height: 70px;
                    width: 70px;
                }
            .toggle-container{
                padding: 10px;
                position: relative;
            } 
                    .menu-section{
                        transform: translateX(-1000px);
                        transition: 1.5s;
                        position: absolute;
                            top: 1;
                            right: 10px;
                        padding: 10px;
                        display: flex;
                            align-items: center;
                            justify-content: right;
                    }
                .fren {
                    transform: translateX(1000px);
                    width:100%;
                    height: 100%;
                    transition: 1s;
                        
                }
                .frennen {
                    transition: 1s;
                    transform: translateX(0);
                    position: fixed;
                    top: 0;
                    right: 0;
                    backdrop-filter: blur(5px);
                }
                    .frennen .menu-section{
                        transform: translateX(0);
                        z-index: 5;
                        top: 0;
                        right: 0;
                        position: absolute;
                        transition: 1.5s;
                        background-color: #920000;
                        height: 70px;
                        width: 100%;
                        max-width: 510px;
                        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
                    }
                    .frennen .menu-section .lan {
                        filter: grayscale(190%) contrast(100%) invert(200%);
                    }       
                        .menu-time-one {
                            transition: 1s;
                        }
                        .menu-time-two{
                            transition: 1.5s;
                        }
/* ... */

